# soniox-live-translate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REFACTOR_SUMMARY.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  config_store.py  context_builder.py  db.py  external_tts.py  logging_config.py  main.py  provider_connection.py  sentry_init.py  stt.py  stt_provider.py  transcript.py  translation_provider.py  translation_styles.py  tts.py  tts_provider.py  tts_session.py  version.py
backend/app/stt_providers/: __init__.py  assemblyai_provider.py  deepgram_provider.py  google_provider.py  openai_provider.py  soniox_provider.py
backend/app/translation_providers/: __init__.py  deepl_provider.py  google_provider.py  openai_provider.py  soniox_provider.py
backend/app/tts_providers/: __init__.py  azure_provider.py  deepgram_provider.py  elevenlabs_provider.py  google_provider.py  openai_provider.py  polly_provider.py  soniox_provider.py
backend/tests/: debug_stt.py  e2e_smoke.py  test_api.py  test_barge.py  test_config_store_security.py  test_context_builder.py  test_db.py  test_google_tts_provider.py  test_handle_stt.py  test_multi_tts.py  test_reconnect.py  test_split_websockets.py  test_stt_provider.py  test_stt_routing.py  test_transcript.py  test_translation_provider.py  test_tts_line_metadata.py  test_tts_session.py
docs/: qa-audio-devices.md  qa-auto-reconnect.md  qa-conversation-history.md
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: index.html  package-lock.json  (+6 more)
(+47 files in other folders)
