[project]
name = "soniox-live-translate"
version = "0.3.0"
description = "Real-time speech-to-speech translation with Soniox Live (STT + translation + TTS)."
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
packaging = [
    "pyinstaller>=6.0",
    "pystray>=0.19.5",
    "pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false
